test/parser/trailing-decimal-mark.cx
// RUN: %not %cx -parse %s | %FileCheck %s

// CHECK: [[@LINE+1]]:12: error: expected identifier, got ';'
var pi = 3.;
